--- a/app/src/main/res/layout/activity_sale_register.xml
+++ b/app/src/main/res/layout/activity_sale_register.xml
@@ -65,7 +65,7 @@
                 android:hint="@string/edt_ProductSale"
                 android:padding="6dp"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                android:textColorHint="@color/material_on_primary_emphasis_medium" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -87,7 +87,7 @@
                 android:hint="@string/edt_ProductSale"
                 android:padding="6dp"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                android:textColorHint="@color/material_on_primary_emphasis_medium" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -109,7 +109,7 @@
                 android:hint="@string/edt_ProductSale"
                 android:padding="6dp"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                android:textColorHint="@color/material_on_primary_emphasis_medium" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -131,7 +131,7 @@
                 android:hint="@string/edt_ProductSale"
                 android:padding="6dp"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                android:textColorHint="@color/material_on_primary_emphasis_medium" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -153,7 +153,7 @@
                 android:hint="@string/edt_ProductSale"
                 android:padding="6dp"
                 android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                android:textColorHint="@color/material_on_primary_emphasis_medium" />
 
         </LinearLayout>
 
